--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,9 @@
     </build>
 
     <scm>
-        <connection>scm:git:ssh://git@github.com:salahuddin09/spring-pet-clinic.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com:salahuddin09/spring-pet-clinic.git</developerConnection>
+        <connection>scm:git:git@github.com:salahuddin09/spring-pet-clinic.git</connection>
+        <url>scm:git:git@github.com:salahuddin09/spring-pet-clinic.git</url>
+        <developerConnection>scm:git:git@github.com:salahuddin09/spring-pet-clinic.git</developerConnection>
     </scm>
 
 </project>
