--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,9 @@
     </build>
 
     <scm>
-        <connection>scm:git:git@github.com:salahuddin09/spring-pet-clinic.git</connection>
-        <url>scm:git:git@github.com:salahuddin09/spring-pet-clinic.git</url>
-        <developerConnection>scm:git:git@github.com:salahuddin09/spring-pet-clinic.git</developerConnection>
+        <connection>scm:git:https://github.com/salahuddin09/spring-pet-clinic.git</connection>
+        <url>https://github.com/salahuddin09/spring-pet-clinic</url>
+        <developerConnection>scm:git:https://github.com/salahuddin09/spring-pet-clinic.git</developerConnection>
     </scm>
 
 </project>
